# OHR

./: README.md
experiments/: OHR_CICIDS_analysis.ipynb  README.md
ohr-core/: MANIFEST.in  README.md  pyproject.toml
ohr-core/configs/: README.md  default_ohr.yaml  soft_linear_d2.yaml
ohr-core/src/ohr/: __init__.py  api.py  config.py  embedding.py  engine.py  hive.py  metrics.py  preprocessing.py  settings.py  tabularizer.py
ohr-core/src/ohr/models/: __init__.py  adapter.py  blocks.py  classifier.py  ohr.py  projection.py  routing.py
ohr-core/src/ohr/resources/: __init__.py
ohr-core/src/ohr/resources/configs/: __init__.py  default_ohr.yaml
ohr-core/src/ohr/utils/: __init__.py  io.py  paths.py  seed.py
ohr-core/tests/: test_classifier.py  test_config.py  test_core_flow.py  test_embedding.py  test_engine.py  test_hive_metrics.py  test_inference_runtime.py  test_preprocessing.py  test_routing.py  test_tabularizer.py
